# margent

./: .gitignore  AGENTS.md  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  SECURITY.md  index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts  vitest.config.ts
.github/: PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml  pages.yml  release.yml
Formula/: margent.rb
cli/: Cargo.toml
cli/src/: actions.rs  anchor_service.rs  critic.rs  export.rs  main.rs  mcp.rs  models.rs  provider.rs  serve.rs  workspace.rs
crates/margent-core/: Cargo.toml
crates/margent-core/src/: agent.rs  anchor.rs  authorship.rs  change_set.rs  critic_markup.rs  deep_link.rs  document.rs  event.rs  export.rs  id.rs  io.rs  lib.rs  proposal.rs  provider_parse.rs  provider_readiness.rs  review_context.rs  thread.rs  workspace.rs
docs/: ACCEPTANCE.md  SPEC.md  agent-setup.md  mdreview-spec.md  pre-public-checklist.md  product-spec.md  release.md
docs/schemas/: agent-cursor.schema.json  authorship.schema.json  document.schema.json  event.schema.json  proposal.schema.json  thread.schema.json
scripts/: check-public-hygiene.sh  install-local-app.sh
site/: index.html  script.js  styles.css
skills/margent/: README.md  SKILL.md
skills/margent/agents/: openai.yaml
src/: App.css  App.tsx  tokens.css
src-tauri/: Cargo.toml  Info.plist  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: lib.rs  main.rs
src-tauri/src/commands/: export.rs  external.rs  mod.rs  proposal.rs  provider.rs  search.rs  thread.rs  workspace.rs
src-tauri/src/models/: adapter.rs  agent.rs  document.rs  export.rs  mod.rs  proposal.rs  provider.rs  search.rs  snapshot.rs  thread.rs  workspace.rs
src-tauri/src/services/: adapter_service.rs  agent_service.rs  anchor_service.rs  diff_service.rs  export_service.rs  file_service.rs  mod.rs  open_request_service.rs  proposal_service.rs  provider_service.rs  search_service.rs  thread_service.rs  workspace_service.rs
src/components/command/: CommandPalette.tsx
src/components/editor/: DocumentEditor.tsx  ProposalDiffPreview.tsx  useCodeMirror.ts
src/components/editor/cm/: proposalReviewExtension.ts
src/components/files/: FileBrowser.tsx
src/components/providers/: ProviderSetupView.tsx
src/components/review/: ReviewBriefView.tsx
src/components/search/: ProjectSearchView.tsx
src/hooks/: useProposals.ts  useReviewBrief.ts  useReviewData.ts  useThreads.ts  useWorkspace.ts
src/lib/: anchor.ts  anchorResolution.ts  appMenuCommands.ts  backend.ts  devPerf.ts  diff.ts  errorMessage.ts  footnote.ts  recentWorkspaces.ts  reviewNotifications.ts  watchTarget.test.ts  watchTarget.ts
src/stores/: reviewDataStore.ts  threadStore.ts  uiStore.ts  workspaceStore.ts
src/types/: export.ts  proposal.ts  providerReadiness.ts  reviewBrief.ts  reviewPass.ts  search.ts  snapshot.ts  thread.ts  workspace.ts
test-fixtures/sample-workspace/: README.md
test-fixtures/sample-workspace/.mdreview/: events.ndjson  workspace.json
test-fixtures/sample-workspace/.mdreview/documents/: doc_7af86eac4f1b0da2.json  doc_b335630551682c19.json
test-fixtures/sample-workspace/.mdreview/threads/: thread_1710676800000001.json  (+2 more)
test-fixtures/sample-workspace/chapters/: draft.md
tests/: PERF_BASELINE.md  anchor-resolution.test.ts  command-palette.test.ts  component-logic.test.ts  diff.test.ts  document-editor-shortcuts.test.tsx  editor-perf.test.ts  footnote-logic.test.ts  layout-css.test.ts  marker-logic.test.ts  no-browser-dialogs.test.ts  perfFixtures.ts  project-search-view.test.tsx  proposal-review-extension.test.ts  readable-markdown.test.ts  reduced-motion-css.test.ts  review-brief-hook.test.tsx  review-brief.test.ts  review-notifications.test.ts  thread-message-links.test.ts  thread-store.test.ts  use-proposals-hook.test.tsx  use-threads-hook.test.tsx  watcher-hooks.test.tsx  workspace-open-request.test.tsx
tests/mocks/: tauri-api.ts  tauri-dialog.ts  tauri-event.ts  tauri-fs.ts
