[workspace]
members = [
    "crates/margent-core",
    "cli",
    "src-tauri",
]
resolver = "2"

[workspace.dependencies]
base64 = "0.22"
hex = "0.4"
margent-core = { path = "crates/margent-core" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha2 = "0.11"
similar = "3"
time = "0.3"
walkdir = "2"
wait-timeout = "0.2"

[profile.release]
lto = "thin"
codegen-units = 1
strip = true
panic = "abort"

[profile.dev]
debug = "line-tables-only"
