[package]
name = "margent-cli"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "margent"
path = "src/main.rs"

[dependencies]
axum = { version = "0.8", features = ["ws"] }
clap = { version = "4", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha2 = "0.10"
hex = "0.4"
margent-core = { path = "../crates/margent-core" }
time = { version = "0.3", features = ["formatting", "parsing"] }
tokio = { version = "1", features = ["macros", "net", "rt-multi-thread", "sync", "time"] }
walkdir = "2"
similar = "2"
wait-timeout = "0.2"
notify = "6"
