[package]
name = "margent-cli"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "margent"
path = "src/main.rs"

[dependencies]
axum = { version = "0.8", features = ["ws"] }
clap = { version = "4", features = ["derive"] }
serde = { workspace = true }
serde_json = { workspace = true }
sha2 = { workspace = true }
hex = { workspace = true }
margent-core = { workspace = true }
time = { workspace = true, features = ["formatting", "parsing"] }
tokio = { version = "1", features = ["macros", "net", "rt-multi-thread", "sync", "time"] }
walkdir = { workspace = true }
similar = { workspace = true }
wait-timeout = { workspace = true }
notify = "8"
